fixed navbar overflow scroll

--- a/src/components/NavbarComponent.css
+++ b/src/components/NavbarComponent.css
@@ -6,6 +6,7 @@
   bottom: 0;
   background-color: white;
   box-shadow: 5px 0px 20px rgba(0,0,0,0.05);
+  z-index: 10;
 }
 
 .sidebar-logo {
